--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <h1 class="app-title">React Chess</h1>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
